FIX: styles for header on mobile fixed when on body add class scroll-top

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -281,7 +281,7 @@
 
     @include media-breakpoint-down($desktop-breakpoint) {
       //top: -44px;
-      //transform: translate3d(0, -44px, 0);
+      transform: translate3d(0, -44px, 0);
     }
 
     + #content {
